@startuml
title Remove Role From User Class Diagram (/api/superadmin/roles/{roleId}/users/{userId})
skinparam classAttributeIconSize 0
skinparam linetype ortho
hide circle
hide empty methods
hide empty fields
note top
Generated from superadmin-remove-role-from-user-sequence.puml.
Classes and members are populated from current repository source when a matching code type exists.
end note

class "RolesController" as BackendRolesController <<backend_controller>> {
  "- _service : IRoleManagementService"
  --
  "+ Remove(roleId: uint, userId: uint, cancellationToken: CancellationToken) : TaskOfIActionResult"
}

class IRoleManagementService <<service_interface>> {
  "+ GetRolesAsync(query: RoleQuery, cancellationToken: CancellationToken) : TaskOfResultOfPagedResultOfRoleModel"
  "+ CreateAsync(request: SaveRoleModel, cancellationToken: CancellationToken) : TaskOfResultOfRoleModel"
  "+ UpdateAsync(roleId: uint, request: SaveRoleModel, cancellationToken: CancellationToken) : TaskOfResultOfRoleModel"
  "+ DeleteAsync(roleId: uint, cancellationToken: CancellationToken) : TaskOfResultOfbool"
  "+ GetUsersAsync(roleId: uint, cancellationToken: CancellationToken) : TaskOfResultOfIReadOnlyCollectionOfRoleUserModel"
  "+ AssignRoleAsync(roleId: uint, userId: uint, cancellationToken: CancellationToken) : TaskOfResultOfbool"
  "+ RemoveRoleAsync(roleId: uint, userId: uint, cancellationToken: CancellationToken) : TaskOfResultOfbool"
}

class RoleManagementService <<service>> {
  "- _repository : IRoleManagementRepository"
  "- _transactionManager : IApplicationTransactionManager"
  "- _profileCache : IUserProfileCacheNullable"
  --
  "+ RemoveRoleAsync(roleId: uint, userId: uint, cancellationToken: CancellationToken) : TaskOfResultOfbool"
}

class Role <<entity>> {
  "+ RoleId : uint"
  "+ RoleName : string"
  "+ Users : ICollectionOfUser"
}

class User <<entity>> {
  "+ UserId : uint"
  "+ RoleId : uint"
  "+ Status : string"
  "+ LastLoginAt : DateTimeNullable"
  "+ CreatedAt : DateTime"
  "+ UpdatedAt : DateTime"
  "+ AuditLogs : ICollectionOfAuditLog"
  "+ OtpVerifications : ICollectionOfOtpVerification"
  "+ RefreshTokens : ICollectionOfRefreshToken"
  "+ Role : Role"
  "+ TestSessions : ICollectionOfTestSession"
  "+ UserAuth : UserAuthNullable"
}

class RefreshToken <<entity>> {
  "+ TokenId : uint"
  "+ UserId : uint"
  "+ TokenHash : string"
  "+ DeviceInfo : stringNullable"
  "+ IpAddress : stringNullable"
  "+ ExpiresAt : DateTime"
  "+ CreatedAt : DateTime"
  "+ RevokedAt : DateTimeNullable"
  "+ User : User"
}

class IRoleManagementRepository <<repository_interface>> {
  "+ GetRolesAsync(query: RoleQuery, cancellationToken: CancellationToken) : TaskOfPagedResultOfRoleModel"
  "+ RoleExistsAsync(roleName: string, cancellationToken: CancellationToken) : TaskOfbool"
  "+ RoleExistsExcludeAsync(roleId: uint, roleName: string, cancellationToken: CancellationToken) : TaskOfbool"
  "+ AddRoleAsync(roleName: string, cancellationToken: CancellationToken) : TaskOfRoleModel"
  "+ UpdateRoleAsync(roleId: uint, roleName: string, cancellationToken: CancellationToken) : TaskOfRoleModelNullable"
  "+ DeleteRoleAsync(roleId: uint, cancellationToken: CancellationToken) : TaskOfbool"
  "+ GetRoleUsersAsync(roleId: uint, cancellationToken: CancellationToken) : TaskOfIReadOnlyCollectionOfRoleUserModelNullable"
  "+ RoleIdExistsAsync(roleId: uint, cancellationToken: CancellationToken) : TaskOfbool"
  "+ GetRoleNameAsync(roleId: uint, cancellationToken: CancellationToken) : TaskOfstringNullable"
  "+ GetUserRoleNameAsync(userId: uint, cancellationToken: CancellationToken) : TaskOfstringNullable"
  "+ AssignRoleAsync(roleId: uint, userId: uint, cancellationToken: CancellationToken) : TaskOfbool"
  "+ RemoveRoleAsync(roleId: uint, userId: uint, defaultRoleId: uint, cancellationToken: CancellationToken) : TaskOfbool"
  "+ GetRoleIdByNameAsync(roleName: string, cancellationToken: CancellationToken) : TaskOfuintNullable"
  "+ HasUsersWithRoleAsync(roleId: uint, cancellationToken: CancellationToken) : TaskOfbool"
  "+ RevokeActiveRefreshTokensAsync(userId: uint, now: DateTime, cancellationToken: CancellationToken) : Task"
}

class RoleManagementRepository <<repository>> {
  "- _dbContext : VocaNovaDbContext"
  --
  "+ GetRoleNameAsync(roleId: uint, cancellationToken: CancellationToken) : TaskOfstring"
  "+ GetUserRoleNameAsync(userId: uint, cancellationToken: CancellationToken) : TaskOfstring"
  "+ RemoveRoleAsync(roleId: uint, userId: uint, defaultRoleId: uint, cancellationToken: CancellationToken) : TaskOfBool"
  "+ GetRoleIdByNameAsync(roleName: string, cancellationToken: CancellationToken) : TaskOfuint"
  "+ RevokeActiveRefreshTokensAsync(userId: uint, now: DateTime, cancellationToken: CancellationToken) : Task"
}

class VocaNovaDbContext <<dbcontext>> {
  "+ AgeRanges : DbSetOfAgeRange"
  "+ AiGradingCaches : DbSetOfAiGradingCache"
  "+ AuditLogs : DbSetOfAuditLog"
  "+ EducationLevels : DbSetOfEducationLevel"
  "+ LearningPurposes : DbSetOfLearningPurpose"
  "+ Occupations : DbSetOfOccupation"
  "+ OtpVerifications : DbSetOfOtpVerification"
  "+ RefreshTokens : DbSetOfRefreshToken"
  "+ Regions : DbSetOfRegion"
  "+ Roles : DbSetOfRole"
  "+ TestAnswers : DbSetOfTestAnswer"
  "+ TestSessions : DbSetOfTestSession"
  --
  "+ SaveChangesAsync(cancellationToken: CancellationToken) : TaskOfInt"
}

class MySQL_Database <<database>> {

}
BackendRolesController ..> IRoleManagementService : RemoveRoleAsync()
RoleManagementRepository ..> VocaNovaDbContext
VocaNovaDbContext ..> MySQL_Database
RoleManagementRepository ..> User
RoleManagementRepository ..> RefreshToken
IRoleManagementRepository <|.. RoleManagementRepository
RoleManagementService ..> IRoleManagementRepository : GetRoleNameAsync()
IRoleManagementService <|.. RoleManagementService
RoleManagementRepository ..> Role
@enduml
